--- a/.tmux.conf
+++ b/.tmux.conf
@@ -7,20 +7,23 @@ set -g @scroll-in-moused-over-pane "on"
 set -g @scroll-without-changing-pane "on"
 set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
 
-bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
-bind -n WheelDownPane select-pane -t= \; send-keys -M
+# Add tmux plugin manager plugin
+set -g @plugin 'tmux-plugins/tpm'
 
-# Allow xterm titles in terminal window, terminal scrolling with scrollbar, and setting overrides of C-Up, C-Down, C-Left, C-Right
-# set -g terminal-overrides "xterm*:XT:smcup@:rmcup@:kUP5=\eOA:kDN5=\eOB:kLFT5=\eOD:kRIT5=\eOC"
-
-# Scroll History
+# Make scrolling with mouse wheel work as expected
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 set -g history-limit 30000
 
-# Set ability to capture on start and restore on exit window data when running an application
+# Set ability to capture on start and restore on exit window data when running
+# an application
 setw -g alternate-screen on
 
-# Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer access.
+# Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer
+# access.
 set -s escape-time 50
 
 source ~/.tmux.conf.theme
-# run-shell ~/.tmux/plugins/tmux-scroll-copy-mode/scroll_copy_mode.tmux
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of
+# tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
