--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,25 +2,23 @@
 set -g terminal-overrides 'xterm*:XT:smcup@:rmcup@'
 
 set-option -g mouse on
+
+# Add tmux plugin manager plugin
+set -g @plugin 'tmux-plugins/tpm'
+# Sensible defaults for tmux, see https://github.com/tmux-plugins/tmux-sensible
+set -g @plugin 'tmux-plugins/tmux-sensible'
+# Make scrolling with mouse wheel work as expected
+set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+
+# TODO investigate why these don't work and find options in tmux-scroll-copy...
 set -g @scroll-down-exit-copy-mode "on"
 set -g @scroll-in-moused-over-pane "on"
 set -g @scroll-without-changing-pane "on"
 set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
 
-# Add tmux plugin manager plugin
-set -g @plugin 'tmux-plugins/tpm'
-
-# Make scrolling with mouse wheel work as expected
-set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
-set -g history-limit 30000
-
 # Set ability to capture on start and restore on exit window data when running
 # an application
 setw -g alternate-screen on
-
-# Lower escape timing from 500ms to 50ms for quicker response to scroll-buffer
-# access.
-set -s escape-time 50
 
 source ~/.tmux.conf.theme
 
