numerous enhancements: tmux 256 color mode, NERDTree plugin for vim...
Change-Id: Ic22c9d3696cc35135e074535bd4a9e576472d4e1

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -20,6 +20,9 @@ set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
 # an application
 setw -g alternate-screen on
 
+# Set TERM in tmux to screen-256color
+set -g default-terminal "screen-256color"
+
 source ~/.tmux.conf.theme
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of
