.tmux.conf: change key bindings for splits

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@ set -g terminal-overrides 'xterm*:XT:smcup@:rmcup@'
 
 set-option -g mouse on
 
+bind | split-window -h
+bind _ split-window
+
 # Add tmux plugin manager plugin
 set -g @plugin 'tmux-plugins/tpm'
 # Sensible defaults for tmux, see https://github.com/tmux-plugins/tmux-sensible
@@ -22,6 +25,14 @@ setw -g alternate-screen on
 
 # Set TERM in tmux to screen-256color
 set -g default-terminal "screen-256color"
+
+# unicode
+setw -g utf8 on
+set -g status-utf8 on
+
+# force a reload of the config file
+unbind r
+bind r source-file ~/.tmux.conf
 
 source ~/.tmux.conf.theme
 
