--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,6 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # Make scrolling with mouse wheel work as expected
 set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
 
-# TODO investigate why these don't work and find options in tmux-scroll-copy...
 set -g @scroll-down-exit-copy-mode "on"
 set -g @scroll-in-moused-over-pane "on"
 set -g @scroll-without-changing-pane "on"
@@ -27,8 +26,8 @@ setw -g alternate-screen on
 set -g default-terminal "screen-256color"
 
 # unicode
-setw -g utf8 on
-set -g status-utf8 on
+# setw -g utf8 on
+# set -g status-utf8 on
 
 # force a reload of the config file
 unbind r
