--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,3 @@
-# Sane scrolling
-set -g terminal-overrides 'xterm*:XT:smcup@:rmcup@'
-
 set-option -g mouse on
 
 bind | split-window -h
@@ -24,6 +21,7 @@ setw -g alternate-screen on
 
 # Set TERM in tmux to screen-256color
 set -g default-terminal "screen-256color"
+set -g terminal-overrides "*256col*:colors=256,xterm*:XT"
 
 # unicode
 # setw -g utf8 on
