--- a/.tmux.conf
+++ b/.tmux.conf
@@ -19,9 +19,20 @@ set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
 # an application
 setw -g alternate-screen on
 
+## set the default TERM
+set -g default-terminal screen
+
+## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+## determine if we should enable 256-colour support
+if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
+
 # Set TERM in tmux to screen-256color
-set -g default-terminal "screen-256color"
+# set -g default-terminal "screen-256color"
 set -g terminal-overrides "*256col*:colors=256,xterm*:XT"
+
+set -g set-titles on
+set -g set-titles-string "#T"
 
 # unicode
 # setw -g utf8 on
