tmux.conf: settings up to date with tmux 2.1

--- a/tmux.conf
+++ b/tmux.conf
@@ -7,14 +7,17 @@ bind _ split-window
 set -g @plugin 'tmux-plugins/tpm'
 # Sensible defaults for tmux, see https://github.com/tmux-plugins/tmux-sensible
 set -g @plugin 'tmux-plugins/tmux-sensible'
-# Make scrolling with mouse wheel work as expected
-set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+## Make scrolling with mouse wheel work as expected
+##set -g @plugin 'nhdaly/tmux-scroll-copy-mode'
+# NOT ANYMORE!
+#set -g @scroll-down-exit-copy-mode "on"
+#set -g @scroll-in-moused-over-pane "on"
+#set -g @scroll-without-changing-pane "on"
+#set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
 
-set -g @scroll-down-exit-copy-mode "on"
-set -g @scroll-in-moused-over-pane "on"
-set -g @scroll-without-changing-pane "on"
-set -g @prevent-scroll-for-fullscreen-alternate-buffer "on"
-
+set -g mouse on
+# to enable mouse scroll, see https://github.com/tmux/tmux/issues/145#issuecomment-150736967
+bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'copy-mode -e'"
 # Set ability to capture on start and restore on exit window data when running
 # an application
 setw -g alternate-screen on
